RESOLVED FIXED238127
Sticky positioned element inside grid has incorrect z order
https://bugs.webkit.org/show_bug.cgi?id=238127
Summary Sticky positioned element inside grid has incorrect z order
Andrey Moiseev
Reported 2022-03-20 09:09:44 PDT
Created attachment 455198 [details] minimal html Sticky positioned element inside grid rendered above its siblings on scroll, in-spite of being the first child in DOM, and placed in a first row of the grid container. Works as expected in google chrome. Notes: - height of grid elements are auto; - if you set top:10px for the sticky positioned element it will rendered underneath the second child, but still above others when you scroll Safari 15.3 iOS 15
Attachments
minimal html (1.30 KB, text/html)
2022-03-20 09:09 PDT, Andrey Moiseev
no flags
video (12.93 MB, video/quicktime)
2022-03-20 09:11 PDT, Andrey Moiseev
no flags
Andrey Moiseev
Comment 1 2022-03-20 09:11:29 PDT
Created attachment 455199 [details] video Video
Radar WebKit Bug Importer
Comment 2 2022-03-21 22:20:41 PDT
Andrey Moiseev
Comment 3 2023-12-17 04:12:22 PST
Hi guys, is there any update regarding this bug? I rise it to critical. I work at Wix.com, all layout of Wix sites is based on css grid, and this bug prevent us to use sticky position layout on Safari browsers, which creates very significant feature parity between Chrome and Safari browsers. Is it possible to fix this bug please?
Simon Fraser (smfr)
Comment 4 2025-07-07 08:52:03 PDT
Simon Fraser (smfr)
Comment 5 2025-07-07 08:52:35 PDT
EWS
Comment 6 2025-07-14 10:58:57 PDT
Committed 297346@main (1d76bd02c232): <https://commits.webkit.org/297346@main> Reviewed commits have been landed. Closing PR #46930 and removing active labels.
Kiet Ho
Comment 7 2025-10-17 17:25:05 PDT
*** Bug 294643 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 8 2026-02-27 12:10:12 PST
Note You need to log in before you can comment on or make changes to this bug.