Fix broken z-ordering on pages with "position: sticky"

https://bugs.webkit.org/show_bug.cgi?id=238127

Reviewed by Simon Fraser.

Sticky elements could move around without recomputing overlap extent,
which leads to incorrect z-ordering when a sticky element moves onto an
element that would otherwise be promoted to be composited for indirect
"overlap" reason. The bug is fixed using the same approach applied in
5b652c3 to "position: fixed" elements: expanding overlap extent to cover
all possible sticky positions.

Bug 238127 mentioned CSS grids, but the issue turned out to be more
general and at least applies to all sticky elements whose containing
block is the root element.

* LayoutTests/compositing/layer-creation/sticky-overlap-extent-expected.txt: Added.
* LayoutTests/compositing/layer-creation/sticky-overlap-extent.html: Added.
* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/page/scrolling/ScrollingConstraints.cpp:
(WebCore::StickyPositionViewportConstraints::computeStickyExtent const):
* Source/WebCore/page/scrolling/ScrollingConstraints.h:
* Source/WebCore/rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeExtent const):

Canonical link: https://commits.webkit.org/297346@main